@@ -1,3 +1,10 @@
+2018-07-23  Allen D. Ball  <ball@sol.local>
+
+	* src/main/java/ball/databind/JSONBean.java,
+	src/main/java/ball/databind/JSONBeanTypeMap.java:
+	Record the ObjectCodec (ObjectMapper) that was used to deserialize
+	the JSONBean.
+
 2018-03-03  Allen D. Ball  <ball@sol.local>
 
 	* src/main/java/ball/databind/JSONBean.java:
